--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@
             badhash="c1a4be04b972b6c17db242fc37752ad517c29402"
             goodhash="e4cfc6f77ebbe2e23550ddab682316ab4ce1c03c"
             
-            git bisect start $bad_commit $good_commit
+            git bisect start $badhash $goodhash
 
         - name: Run git bisect with tests
           run: |
